--- a/src/app/css/main.css
+++ b/src/app/css/main.css
@@ -50,13 +50,14 @@ body {
     position: absolute;
     width: 50%;
     z-index: 1;
-    height: calc(100% - 7em);
+    height: calc(100% - 8em);
+    margin-top: 5em;
+    padding-top: 1em;
 }
 
 .left-area {
     border-right: 1px solid black;
     clear: both;
-    margin-top: 5em;
     padding-bottom: 2em;
     width: 50%;
 }
@@ -64,7 +65,6 @@ body {
 .right-area {
     border-left: 1px solid black;
     clear: both;
-    margin-top: 5em;
     padding-bottom: 2em;
     left: 50%;
     width: 50%;
@@ -74,14 +74,18 @@ body {
     position: relative;
     float: left;
     padding: 1em;
-    margin: 1em;
+    margin: 0 1em;
     width: 5em;
-    height: 5em;
+    height: 6.5em;
     text-align: center;
 }
 
+.item:hover {
+    background-color: rgba(220, 220, 220, 0.3);
+}
+
 .item .filename {
-    padding-top: 1em;
+    padding-top: 0.2em;
     font-size: 10pt;
     overflow: hidden;
     text-overflow: ellipsis;
